[project]
name = "aunetreceive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikołaj Gradowski", email = "hello@mgradow.ski" }
]
requires-python = ">=3.14"
dependencies = [
    "zeroconf>=0.148.0",
]

[project.scripts]
aunetreceive = 'aunetreceive.__main__:main'

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
