[project]
name = "aunetreceive"
description = "Simple pure-Python receiver for Apple's AUNetSend."
readme = "README.md"
authors = [
    { name = "Mikołaj Gradowski", email = "hello@mgradow.ski" }
]
requires-python = ">=3.14"
dependencies = [
    "pyalsaaudio>=0.11.0 ; sys_platform == 'linux'",
    "zeroconf>=0.148.0",
]
dynamic=["version"]

[project.scripts]
aunetreceive = 'aunetreceive.__main__:main'

[build-system]
requires = ["hatchling>=1.27.0,<1.28.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

